# cerberus

./: CLAUDE.md  README.md
.github/workflows/: claude-code-review.yml  flex-gateway-release.yml
cerberus-django/: pyproject.toml
cerberus-django/src/cerberus_django/: middleware.py  structs.py
cerberus-django/tests/: test_middleware.py  test_parity.py
cerberus-envoy-ai-gateway/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  pyproject.toml
cerberus-envoy-ai-gateway/deploy/ai-gateway/: extproc-env.yaml
cerberus-envoy-ai-gateway/deploy/kubernetes/: bridge.yaml
cerberus-envoy-ai-gateway/playground/: docker-compose.yaml  drive.sh  mcp-servers.json  run.sh  stub_ingest.py
cerberus-envoy-ai-gateway/playground/mocks/: mock_llm.py  mock_mcp.py
cerberus-envoy-ai-gateway/src/cerberus_envoy_ai_gateway/: __init__.py  app.py  classify.py  cli.py  config.py  mapper_llm.py  mapper_mcp.py  otlp.py  pipeline.py  queue.py  secret.py  sink.py  spanfields.py
cerberus-envoy-ai-gateway/tests/: conftest.py  helpers.py  test_app.py  test_config.py  test_mapper_llm.py  test_mapper_mcp.py  test_otlp_decode.py  test_pipeline.py  test_queue.py  test_sink.py  test_spanfields.py
cerberus-envoy-ai-gateway/tests/fixtures/expected/: llm_anthropic_messages.yaml  llm_openai_chat.yaml  mcp_tool_call.yaml
cerberus-envoy-ai-gateway/tests/fixtures/spans/: llm_anthropic_messages.json  llm_error.json  llm_openai_chat.json  mcp_initialize.json  mcp_resource_read.json  mcp_tool_call.json  mcp_tool_call_route_events.json  mcp_tools_list_schema.json
cerberus-flex-gateway/: .gitignore  Cargo.toml  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  install.sh  rust-toolchain.toml
cerberus-flex-gateway/.cargo/: config.toml
cerberus-flex-gateway/definition/: gcl.yaml
cerberus-flex-gateway/playground/: docker-compose.yaml
cerberus-flex-gateway/playground/config/: api.yaml  logging.yaml
cerberus-flex-gateway/scripts/: bundle.sh
cerberus-flex-gateway/src/: ai_content.rs  config.rs  event.rs  hash.rs  lib.rs  path_filter.rs  pii_rules.rs  pipeline_tests.rs  queue.rs  sampler.rs  sanitize.rs  secret.rs  sink.rs  source_ip.rs
cerberus-flex-gateway/tests/: parity_runner.rs
parity-fixtures/: README.md  content_type.yaml  custom_pii_rules.yaml  hash_pii.yaml  normalize_ip.yaml  path_filter.yaml  sanitize_dict.yaml  sensitive_headers.yaml
